--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,8 +3,8 @@
       package="net.virtualvoid.android.browser"
       android:versionCode="1"
       android:versionName="0.0.1">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".APIBrowser"
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".APIBrowser">
+        <activity android:name=".APIBrowserView"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
