--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.virtualvoid.android.browser"
       android:versionCode="1"
-      android:versionName="0.0.1">
+      android:versionName="0.1.0">
+    <uses-sdk android:minSdkVersion="2" />
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".APIBrowser">
         <activity android:name=".APIBrowserView"
                   android:label="@string/app_name">
