--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,8 +4,8 @@
       android:versionCode="1"
       android:versionName="0.1.0">
     <uses-sdk android:minSdkVersion="2" />
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".APIBrowser">
-        <activity android:name=".APIBrowserView"
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".ObjectBrowser">
+        <activity android:name=".ObjectBrowserView"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
