--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,12 +4,24 @@
       android:versionCode="3"
       android:versionName="0.2.0">
     <uses-sdk android:minSdkVersion="2" />
-    <application android:icon="@drawable/magnifier" android:label="@string/app_name" android:name=".ObjectBrowser">
+    <application android:icon="@drawable/magnifier" android:label="@string/app_name">
         <activity android:name=".ObjectBrowserView"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            
+            <intent-filter>
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="obrowse"/>
             </intent-filter>
         </activity>
     </application>
